--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ div.nav
 
 ul.mainContent li span
 {
-	font-family: Titil;
+	font-family: PLOVR;
 /*	writing-mode: tb-rl;
 	-webkit-transform: rotate(90deg); 
 	-moz-transform: rotate(90deg);
