--- a/css/main.css
+++ b/css/main.css
@@ -273,10 +273,10 @@ ul li p{
 {
 	overflow: hidden;
 	border-top: #46B9D9 solid 2px;
-	border-bottom: #46B9D9 solid 2px;
+	/*border-bottom: #46B9D9 solid 2px;*/
 	padding: 20px 0px; 
 	margin: 20px 0px;
-	height: 100px;
+	height: 200px;
 	width:	676px;
 	background: white;
 }
@@ -284,7 +284,7 @@ ul li p{
 	{
 		border: dotted gray 1px;
 		width: 220px;
-		height: 120px;
+		height: 200px;
 		background: url(../images/logos/groups/adaptive.png) no-repeat;
 	}
 
@@ -293,7 +293,9 @@ ul li p{
 .sorting_box
 {
 	display:block;
+	border-top: #46B9D9 solid 2px;
 	font-family: Titil;
+	width: 676px;
 }
 	.sorting_box fieldset
 	{
@@ -397,9 +399,8 @@ ul li p{
 /*/////// GALLERY //////////*/
 
 ul.image-grid {
-	padding-top: 	15px;
-  	padding-left: 	5px;
-  	width: 			700px;
+	padding: 15px 5px;
+	width: 	700px;
 }
 
 ul.image-grid:after {
